<resources>
    <string name="app_name">SafeGuardApplication</string>


    <string name="EnterFullName">Enter your full name</string>
    <string name="EnterPPass">Enter your prefered password</string>

    <string name="EnterEmail">Enter your email adress</string>
    <string name="EnterPass">Enter your  password</string>
    <string name="Agreement">Agree to the companies <font color="#0047FF">terms and services</font></string>
    <string name="SugLogin">Already got an account then</string>
    <string name="login"><font color="#0047FF">Login .</font></string>
    <string name="fgpass">Did your forget your passsword?</string>
    <string name="text_otp_validationE">Enter the code sent to you by Email</string>
    <string name="text_otp_validationM">Enter the code sent to you by Mobile number</string>
    <string name="nom">nomPersonne</string>
    <string name="numeroTel">53115231</string>
    <string name="name_here">Name Here</string>
    <string name="email_here">Email Here</string>
    <string name="numeroTel_here">NumeroTel Here</string>
    <string name="txt_forgot_password_desc">Please enter your registered email to reset your password</string>
    <string name="txt_forgot_password_desc2">Please enter your registered phone number to reset your password</string>
    <string name="EnterTel">Enter your phone number </string>
    <string name="btn_submit">Submit</string>
    <string name="btn_sendSMS">Send SMS</string>
    <string name="btn_verify">Verify</string>
    <string name="txt_or">OR</string>
    <string name="input_email_or_phone">Email/Phone</string>
    <string name="sign_in">Sign in</string>
    <string name="profile">profile</string>
    <string name="beauty_desc">beauty description</string>
    <string name="info">Info</string>
    <string name="logout">Logout</string>
    <string name="txt_forgot_password">Forgot Password</string>
    <string name="change_it">change it now</string>
    <string name="signup">SignUp</string>
    <string name="mapbox_access_token">sk.eyJ1Ijoib3Vzc2FtYWJvdXJpZ2EiLCJhIjoiY2xwNWl1dXk5MWozZzJycXl6enR5MzBmeSJ9.KZvaArDJOGDDkVG4Sx4egA</string>
    <string name="title_activity_courr">CourrActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Introduction">Introduction</string>
    <string name="menu_Cause">Causes</string>
    <string name="menu_Consequence">Conséquences</string>
    <string name="menu_Signes">Signes de catastrophe </string>
    <string name="menu_Agir">Mesures Préventives</string>
    <string name="menu_Quiz">Quiz</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>