<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<item android:title="Contenue de cours">
    <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_introduction"

                android:title="@string/menu_Introduction" />
            <item
                android:id="@+id/nav_cause"

                android:title="@string/menu_Cause" />
            <item
                android:id="@+id/nav_consequence"

                android:title="@string/menu_Consequence" />
            <item
                android:id="@+id/nav_signe"

                android:title="@string/menu_Signes" />
            <item
                android:id="@+id/nav_agir"

                android:title="@string/menu_Agir" />
        </group>
    </menu>
</item>
    <item android:title="Teste de niveau">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_quiz"

                    android:title="@string/menu_Quiz" />
            </group>
        </menu>
    </item>



</menu>