<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:circularflow_radiusInDP="12sp"
    tools:context=".ui.activities.SignInActivity">


<ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:layout_marginBottom="509dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/group_1" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="596dp"
        android:layout_marginEnd="218dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_2"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="195dp"
        android:layout_height="63dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="Description for accessibility"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailsi"
        android:layout_width="353dp"
        android:layout_height="51dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#000000"
        android:backgroundTintMode="src_atop"
        android:fontFamily="@font/poppins_thin"
        android:hint="@string/EnterEmail"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"></com.google.android.material.textfield.TextInputEditText>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordsi"
        android:layout_width="348dp"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#1B1919"
        android:fontFamily="@font/poppins_thin"
        android:hint="@string/EnterPass"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailsi"></com.google.android.material.textfield.TextInputEditText>


    <Button
        android:id="@+id/SigninB"
        android:layout_width="172dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="#0047FF"
        android:contentDescription="@string/beauty_desc"
        android:text="Sign in"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordsi"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/g_login"
        android:layout_width="60dp"
        android:layout_height="59dp"
        android:layout_marginTop="44dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SigninB"
        app:srcCompat="@drawable/google_1" />

    <ImageView
        android:id="@+id/fb_login"
        android:layout_width="62dp"
        android:layout_height="58dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toStartOf="@+id/g_login"
        app:layout_constraintTop_toBottomOf="@+id/SigninB"
        app:srcCompat="@drawable/facebook_1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="112dp"
        android:contentDescription="Description for accessibility"
        android:fontFamily="@font/poppins_thin"
        android:text="Don't have an account?"
        android:textColor="@color/Secondary"
        android:textColorHint="@color/colorSecondary"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fb_login"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/switchLoginSignupButton"
        android:layout_width="96dp"
        android:layout_height="73dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="112dp"
        android:backgroundTint="#0047FF"
        android:clickable="true"
        android:contentDescription="@string/beauty_desc"
        android:fontFamily="@font/poppins_thin"
        android:padding="16dp"
        android:text="@string/signup"
        android:textColor="#0047FF"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/g_login" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="185dp"
        android:layout_height="34dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="196dp"
        android:background="#FFFFFF"
        android:contentDescription="Description for accessibility"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/fgpass"
        android:textColor="#000000"
        android:textSize="11sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordsi"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="161dp"
        android:layout_height="26dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/beauty_desc"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/change_it"
        android:textColor="@color/colorButton"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordsi"
        tools:ignore="TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>