<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="159dp"
            android:layout_height="151dp"
            android:layout_marginStart="270dp"
            android:contentDescription="@string/beauty_desc"
            app:srcCompat="@drawable/group_1" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:queryHint="Search items..." />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/ProfileImage"
                    android:layout_width="81dp"
                    android:layout_height="64dp"
                    android:layout_marginEnd="97dp"
                    android:contentDescription="@string/profile"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/nomP"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.64"
                    app:srcCompat="@drawable/user" />

                <TextView
                    android:id="@+id/nomP"
                    android:layout_width="99dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/nom"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ProfileImage"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="29dp"
                    android:layout_height="23dp"
                    android:layout_marginStart="51dp"
                    android:layout_marginEnd="26dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/beauty_desc"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.631"
                    app:layout_constraintStart_toEndOf="@+id/nomP"
                    app:srcCompat="@drawable/plus" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <ImageView
        android:id="@+id/component2"
        android:layout_width="120dp"
        android:layout_height="112dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="291dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/beauty_desc"
        app:srcCompat="@drawable/group_2" />

</RelativeLayout>
